# iris

./: Cargo.toml  README.md  build.rs
docs/: index.html
src/: lib.rs  main.rs  utils.rs
src/core/: config.rs  mod.rs  models.rs
src/services/: icon_service.rs  mod.rs  process_manager.rs
src/ui/: app_hub.rs  mod.rs  theme.rs
src/ui/components/: app_card.rs  empty_state.rs  footer.rs  header.rs  mod.rs
src/ui/dialogs/: app_modal.rs  delete_confirm.rs  mod.rs
